--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -244,9 +244,11 @@
     "hugoNew": "Hugo New",
     "login": "Login",
     "logout": "Logout",
+    "logs": "Logs",
     "myFiles": "My files",
     "newFile": "New file",
     "newFolder": "New folder",
+    "pixelcade": "Pixelcade",
     "preview": "Preview",
     "settings": "Settings",
     "signup": "Signup",
