--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -255,7 +255,8 @@
     "settings": "Settings",
     "signup": "Signup",
     "siteSettings": "Site Settings",
-    "supportFile": "Support File"
+    "supportFile": "Support File",
+    "sysInfo": "System Information"
   },
   "success": {
     "linkCopied": "Link copied!"
